Fix horizontal scrollbar on small viewports in Papers section

--- a/_sass/entities/_section.scss
+++ b/_sass/entities/_section.scss
@@ -186,6 +186,8 @@
 	padding-bottom: 0;
 
 	.major {
+		overflow: hidden;
+
 		h2 {
 			padding-right: 0;
 
